--- a/app/src/main/res/drawable/custom_btn2.xml
+++ b/app/src/main/res/drawable/custom_btn2.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="4dp"
-        android:color="#D6D637" />
+        android:color="#FBFBA5" />
 
     <solid android:color="#0640e0" />
 
