All Bugs Fixed and In Warranty work done added.

--- a/app/src/main/res/drawable/custom_btn.xml
+++ b/app/src/main/res/drawable/custom_btn.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="20dp" />
 
-    <solid android:color="#0640e0" />
+    <solid android:color="@color/colorPrimaryDark" />
 
 </shape>
