--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -67,7 +67,7 @@
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:contentDescription="image"
-                android:src="@drawable/india" />
+                android:src="@drawable/indianflag" />
 
             <!--            <androidx.appcompat.widget.AppCompatImageView-->
             <!--                android:layout_width="100dp"-->
