--- a/app/src/main/res/layout/fragment_close_log.xml
+++ b/app/src/main/res/layout/fragment_close_log.xml
@@ -7,7 +7,7 @@
     android:padding="5dp"
     tools:context=".fragments.CloseLogFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -38,8 +38,18 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="40dp" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/no_record"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center_horizontal"
+            android:text="No Record"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
