--- a/app/src/main/res/layout/fragment_warranty_log.xml
+++ b/app/src/main/res/layout/fragment_warranty_log.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".fragments.CallLogFragment">
+    tools:context=".fragments.WarrantyLogFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 android:layout_marginTop="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="5dp"
-                android:text="Open Logs"
+                android:text="Warranty Logs"
                 android:textColor="#0640e0"
                 android:textSize="18sp" />
 
@@ -38,8 +38,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp" />
 
         <TextView
             android:id="@+id/no_record"
