--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/logo"
@@ -25,26 +26,27 @@
             android:layout_below="@+id/logo"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="@string/app_name"
+            android:text="Welcome To\nWeFix"
             android:textColor="#0640e0"
-            android:textSize="35sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/logo"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="160dp"
             android:layout_marginEnd="20dp"
-            android:elevation="10dp">
+            android:layout_marginBottom="20dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="25dp">
+                android:padding="20dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -87,12 +89,12 @@
 
                     <ImageView
                         android:id="@+id/pass_btn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_alignParentEnd="true"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="22.5dp"
+                        android:layout_marginEnd="15dp"
                         android:alpha=".5"
                         android:onClick="ShowHidePass"
                         android:src="@drawable/password_visible_asset" />
