--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
+        android:background="@color/colorPrimaryDark"
         android:theme="@style/AppTheme"
         app:titleTextColor="#0640e0">
 
@@ -24,7 +24,7 @@
                 android:layout_width="150dp"
                 android:layout_height="80dp"
                 android:cropToPadding="true"
-                android:src="@drawable/logo" />
+                android:src="@drawable/logo_text_orange" />
 
         </RelativeLayout>
 
