--- a/app/src/main/res/layout/fragment_in_warranty.xml
+++ b/app/src/main/res/layout/fragment_in_warranty.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="#fff"
     android:orientation="vertical"
-    tools:context=".fragments.AddLogFragment">
+    tools:context=".fragments.InWarrantyFragment">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:text="Add Out Of Warranty Call Log"
+                android:text="Add In Warranty Call Log"
                 android:textColor="#0640e0"
                 android:textSize="25sp" />
 
@@ -45,6 +45,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
                 android:padding="7dp" />
 
 
@@ -64,6 +65,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
                 android:inputType="textPostalAddress"
                 android:padding="7dp" />
 
@@ -83,6 +85,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
                 android:inputType="number"
                 android:padding="7dp" />
 
@@ -102,6 +105,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
                 android:inputType="phone"
                 android:padding="7dp" />
 
@@ -121,6 +125,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
                 android:inputType="textEmailAddress"
                 android:padding="7dp" />
 
@@ -129,17 +134,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Category:"
+                android:text="Product Name"
                 android:textSize="18sp" />
 
-            <Spinner
-                android:id="@+id/category1"
+            <EditText
+                android:id="@+id/category"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/custom_spinner"
+                android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
+                android:inputType="textEmailAddress"
                 android:padding="7dp" />
 
             <TextView
@@ -147,17 +154,57 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Service: "
+                android:text="Purchase Date: "
                 android:textSize="18sp" />
 
-            <Spinner
-                android:id="@+id/service"
+            <EditText
+                android:id="@+id/purchase"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_spinner"
+                android:gravity="center_vertical"
+                android:hint="yyyy-mm-dd"
+                android:padding="7dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Model No:"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/model"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/custom_spinner"
+                android:gravity="center_vertical"
+                android:padding="7dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Serial No: "
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/serial"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/custom_spinner"
+                android:gravity="center_vertical"
                 android:padding="7dp" />
 
             <TextView
@@ -168,15 +215,14 @@
                 android:text="Company"
                 android:textSize="18sp" />
 
-            <EditText
+            <Spinner
                 android:id="@+id/company"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/custom_edit_text1"
-                android:inputType="text"
+                android:background="@drawable/custom_spinner"
                 android:padding="7dp" />
 
             <TextView
@@ -195,7 +241,54 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/custom_edit_text1"
+                android:gravity="center_vertical"
                 android:padding="7dp" />
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp">
+
+                <Button
+                    android:id="@+id/upload_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/custom_btn"
+                    android:padding="5dp"
+                    android:text="upload Tax Invoice"
+                    android:textColor="#fff" />
+
+                <Button
+                    android:id="@+id/cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:background="@drawable/custom_btn"
+                    android:padding="5dp"
+                    android:text="Cancel"
+                    android:textColor="#fff" />
+
+                <Button
+                    android:id="@+id/upload"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/custom_btn"
+                    android:padding="5dp"
+                    android:text="Upload"
+                    android:textColor="#fff" />
+
+            </RelativeLayout>
 
             <Button
                 android:id="@+id/add"
