--- a/app/src/main/res/layout/warranty_recycler_view.xml
+++ b/app/src/main/res/layout/warranty_recycler_view.xml
@@ -53,41 +53,28 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/colorPrimary" />
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="3dp" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/name1"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp" />
 
                     <TextView
-                        android:id="@+id/service"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/company1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp" />
 
                     <TextView
-                        android:id="@+id/company"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/problem_des"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp" />
 
