add Payment details and Search bar Implement

--- a/app/src/main/res/layout/fragment_call_log.xml
+++ b/app/src/main/res/layout/fragment_call_log.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -14,8 +15,29 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/a"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="50dp"
+            android:background="#4960E0">
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_view"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="#fff"
+                app:queryHint="Search By ID or Client Name"
+                app:searchIcon="@drawable/search_asset" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/a">
 
             <View
                 android:layout_width="4dp"
@@ -39,7 +61,9 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp" />
+            android:layout_below="@id/a"
+            android:layout_marginTop="40dp"
+            tools:listitem="@layout/log_history" />
 
         <TextView
             android:id="@+id/no_record"
@@ -50,6 +74,13 @@
             android:gravity="center_horizontal"
             android:text="@string/no_record"
             android:textSize="20sp" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
 
     </RelativeLayout>
 
