--- a/app/src/main/res/layout/activity_payment_log.xml
+++ b/app/src/main/res/layout/activity_payment_log.xml
@@ -22,7 +22,7 @@
         android:layout_below="@id/toolbar"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="All Logs"
+        android:text="@string/all_logs"
         android:textColor="#0460e0"
         android:textSize="20sp" />
 
